2005-06-08  Titus Brown  <t@issola.caltech.edu>

	* Added 'test/README.txt' for testing docs.

	* Applied Joeri van Ruth's patch to make '-' as a filename
	  read from stdin.

2005-06-06  Titus Brown  <t@issola.caltech.edu>

	* Now checks for exact matches to fieldnames before trying out
	  regexps.

	* Submit w/o submit buttons now working.

	* Fixed quoted handling of __stuff__.

	* More intelligent pyparsing stuff from Paul McGuire; in particular,
	  comments on the ends of lines are allowed, and '#' in arguments
	  is disallowed.

2005-06-04  Titus Brown  <t@issola.caltech.edu>

	* added a couple of command line options using 'optparse'.

	* added __url__ ==> current URL.

	* added some of Paul McGuire's suggestions for cleaning up the
	  pyparsing code.

	* better error reporting on all exceptions while executing
	  file.

	* Fixed a relative URL issue: twill now tries several URLs in order,
	  only prepending 'http://' when it's tried other URLs first.  Added
	  test.

	* Added Joeri van Ruth's patches: new sleep command, and transmit
	  value of submit buttons on form submission.  Added tests for the
	  latter.  Documented.

2005-05-26  Titus Brown  <t@issola.caltech.edu>

	* all files specified on command-line now executed.

	* emacs backup files (filename~) now skipped by twill-sh.

	* error output on script execution now includes line number &
	filename.

2005-05-25  Titus Brown  <t@issola.caltech.edu>

	* added reset_state; run it on each execute_file.

2005-05-24  Titus Brown  <t@issola.caltech.edu>

	* 'go domainname' now works as expected.

	* Made various form-related submit() errors clearer.

	* Fixed problem with spaces in link *text*.  (Actually a more
	general bug that caused link searches to fail in most cases.)

2005-05-23  Titus Brown  <t@issola.caltech.edu>

	* Fixed problem with spaces in links/URLs.
