@@ -134,6 +134,7 @@ given form to the given value.  For read-only form widgets/controls, the
 click may be recorded for use by <strong>submit</strong>, but the value is not changed.</p>
 <p><strong>fv</strong> -- abbreviation for 'formvalue'</p>
 <p><strong>formclear</strong> -- clear all values in the form.</p>
+<p><strong>formfile</strong> <em>&lt;formspec&gt; &lt;fieldspec&gt; &lt;filename&gt; [ &lt;content_type&gt; ]</em> -- attach a file to a file upload button by filename.</p>
 </div>
 <div class="section" id="cookies">
 <h2><a class="toc-backref" href="#id8" name="cookies">Cookies</a></h2>
@@ -150,6 +151,7 @@ click may be recorded for use by <strong>submit</strong>, but the value is not c
 <p><strong>getinput</strong> <em>&lt;prompt&gt;</em> -- get keyboard input and store it in <tt class="docutils literal"><span class="pre">__input__</span></tt>.</p>
 <p><strong>getpassword</strong> <em>&lt;prompt&gt;</em> -- get <em>silent</em> keyboard input and store
 it in <tt class="docutils literal"><span class="pre">__password__</span></tt>.</p>
+<p><strong>add_auth</strong> <em>&lt;realm&gt; &lt;uri&gt; &lt;user&gt; &lt;password&gt;</em> -- add HTTP Basic Authentication information for the given realm/URI combination.</p>
 </div>
 <div class="section" id="special-variables">
 <h2><a class="toc-backref" href="#id10" name="special-variables">Special variables</a></h2>
@@ -163,14 +165,14 @@ it in <tt class="docutils literal"><span class="pre">__password__</span></tt>.</
 <p>twill is developed in python 2.3, and should work fine with python 2.4.
 You don't need any other software; both <a class="reference" href="http://pyparsing.sourceforge.net/">pyparsing</a> and <a class="reference" href="http://wwwsearch.sf.net/">mechanize</a> are
 required but included with twill.</p>
-<p>Version 0.7 (&quot;more things work&quot;) is available for
-download <a class="reference" href="http://darcs.idyll.org/~t/projects/twill-0.7.tar.gz">here</a>.  The latest development version can be found at
-<a class="reference" href="http://darcs.idyll.org/~t/projects/twill-latest.tar.gz">twill-latest.tar.gz</a>.  There's a darcs repository for the project at
-<a class="reference" href="http://darcs.idyll.org/~t/projects/twill/">http://darcs.idyll.org/~t/projects/twill/</a>.</p>
+<p>Version 0.7.1 (&quot;most of the obvious bugs have been fixed&quot;) is
+available for download <a class="reference" href="http://darcs.idyll.org/~t/projects/twill-0.7.1.tar.gz">here</a>.  The latest development version can be
+found at <a class="reference" href="http://darcs.idyll.org/~t/projects/twill-latest.tar.gz">twill-latest.tar.gz</a>.  There's a darcs repository for the
+project at <a class="reference" href="http://darcs.idyll.org/~t/projects/twill/">http://darcs.idyll.org/~t/projects/twill/</a>.</p>
 <div class="section" id="licensing">
 <h2><a class="toc-backref" href="#id12" name="licensing">Licensing</a></h2>
-<p>twill 0.7 is licensed under the <a class="reference" href="http://www.gnu.org/copyleft/lesser.html">GNU LGPL</a>, although I am amenable to
-changing to an MIT-like license in the future.  All code currently
+<p>twill 0.7.1 is licensed under the <a class="reference" href="http://www.gnu.org/copyleft/lesser.html">GNU LGPL</a>, although I am amenable
+to changing to an MIT-like license in the future.  All code currently
 contained in twill is Copyright (C) 2005, C. Titus Brown
 &lt;<a class="reference" href="mailto:titus&#64;caltech.edu">titus&#64;caltech.edu</a>&gt;.</p>
 <p>In plain English: I own the code, but you're welcome to use it and
@@ -283,15 +285,7 @@ fixes, soon...</p>
 <li>unit testing in Python.</li>
 <li>command-line option to fork server before executing twill.  (or
 special test script, whatever.)</li>
-<li>formfile &lt;formspec&gt; &lt;fieldspec&gt; &lt;filename&gt;</li>
-<li>twill-sh -i as in python -i (DONE)</li>
-<li>twill-sh silence (DONE)</li>
-<li>submit on forms w/o submit button? (helgon...) (DONE)</li>
 <li>execute directories/directory trees?</li>
-<li>switch between executing all files &amp; stopping on first error. (DONE)</li>
-<li>&quot;fv 1 n value&quot; doesn't work, n ==&gt; number does.  (FIXED)</li>
-<li>HTTP basic auth</li>
-<li>command-line option for initial URL. (DONE)</li>
 </ol>
 </blockquote>
 <p>Longer term fixes &amp; cleanups:</p>
@@ -300,6 +294,7 @@ special test script, whatever.)</li>
 <li>fix spaces-in-URLs problem more generally (in urllib2).</li>
 <li>Paul McGuire's pyparsing suggestions</li>
 <li>cookie &quot;1&quot; vs 1, in cookielib.</li>
+<li>Test HTTP basic auth.</li>
 </ol>
 </blockquote>
 <p>Contributions are welcome &amp; will be duly acknowledged!</p>
